Patch 2: some fixes to the developer-docs stylesheet.... Patch 3: add "Since:" to the api level info Patch 4: fix packages page and styles to reveal class summary
Squashed commit of the following:

commit 8fcdcb8dcbe9b93688f5eb1020654848d3242675
Author: Scott Main <smain@google.com>
Date:   Mon Jul 27 09:33:45 2009 -0700

    remove the toggle selector from the header.
    this will be added in a later change with the rest of the toggle script

commit 2423b30ee46c12f92051c4f2a096532e55752c46
Author: Scott Main <smain@google.com>
Date:   Fri Jul 24 16:29:21 2009 -0700

    Implement API Level styles.
    This changes the way we show the API Level for a given package/class/member.
    It also provides hooks in the document to allow us to restyle items
    based on a user-selected API Level (show/hide available items).
    More changes to provide the toggling feature will come soon.

commit efd94b33071070f0dfc2045131b81cbdfe078468
Author: Scott Main <smain@google.com>
Date:   Mon Jul 27 09:33:45 2009 -0700

    remove the toggle selector from the header.
    this will be added in a later change with the rest of the toggle script

commit 3fb79313232c993f700ee90a94f59dcca275fb0b
Author: Scott Main <smain@google.com>
Date:   Fri Jul 24 16:29:21 2009 -0700

    Implement API Level styles.
    This changes the way we show the API Level for a given package/class/member.
    It also provides hooks in the document to allow us to restyle items
    based on a user-selected API Level (show/hide available items).
    More changes to provide the toggling feature will come soon.

--- a/tools/droiddoc/templates/assets/android-developer-core.css
+++ b/tools/droiddoc/templates/assets/android-developer-core.css
@@ -49,8 +49,12 @@ a:visited code {
 
 input, select,
 textarea, option {
-  font-family:inherit;
-  font-size:inherit;
+  padding:0;
+  margin:0;
+}
+
+option {
+  padding:0 4px;
 }
 
 p {
@@ -692,7 +696,6 @@ td.gsc-search-button {
 #search-button {
   margin:0 0 0 2px;
   font-size:11px;
-  height:1.8em;
 }
 
 /* search result tabs */
